--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+.App {
+  text-align: center;
+  background-color: #282c34;
+  padding-top: 84px;
+  min-height: 100vh;
+}
+/*
 .App {
   text-align: center;
 }
@@ -36,4 +46,4 @@
     transform: rotate(360deg);
   }
 }
-
+*/
